Remove some speculative changes from the UML and regenerate files.

--- a/docs/UML/class_index.adoc
+++ b/docs/UML/class_index.adoc
@@ -3,12 +3,64 @@
 
 === Model org.openehr.proc
 
+==== Package dlom
+
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_dl_assignment_class[DL_ASSIGNMENT^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_dl_block_class[DL_BLOCK^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_dl_case_branch_class[DL_CASE_BRANCH^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_dl_case_group_class[DL_CASE_GROUP^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_dl_case_rule_class[DL_CASE_RULE^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_dl_condition_branch_class[DL_CONDITION_BRANCH^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_dl_condition_chain_class[DL_CONDITION_CHAIN^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_dl_condition_def_class[DL_CONDITION_DEF^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_dl_condition_rule_class[DL_CONDITION_RULE^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_dl_data_binding_class[DL_DATA_BINDING^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_dl_model_ref_class[DL_MODEL_REF^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_dl_module_class[DL_MODULE^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_dl_procedure_call_class[DL_PROCEDURE_CALL^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_dl_rule_class[DL_RULE^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_dl_statement_class[DL_STATEMENT^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_module_class[MODULE^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_pl_assertion_class[PL_ASSERTION^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_pl_choice_branch_class[PL_CHOICE_BRANCH^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_pl_choice_group_class[PL_CHOICE_GROUP^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_pl_condition_branch_class[PL_CONDITION_BRANCH^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_pl_condition_group_class[PL_CONDITION_GROUP^]
+
+==== Package proxy
+
+[.xcode]
+* link:/releases/PROC/{proc_release}/proxy.html#_proxy_module_class[PROXY_MODULE^]
+
 ==== Package task_planning
 
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_adhoc_branch_class[ADHOC_BRANCH^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_adhoc_group_class[ADHOC_GROUP^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/task_planning.html#_allocation_status_enumeration[ALLOCATION_STATUS^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_api_call_class[API_CALL^]
 [.xcode]
@@ -51,6 +103,8 @@
 * link:/releases/PROC/{proc_release}/task_planning.html#_customary_time_class[CUSTOMARY_TIME^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_dataset_spec_class[DATASET_SPEC^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/task_planning.html#_dataspec_commit_group_class[DATASPEC_COMMIT_GROUP^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_decision_branch_class[DECISION_BRANCH^]
 [.xcode]
@@ -98,9 +152,13 @@
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_manual_notification_class[MANUAL_NOTIFICATION^]
 [.xcode]
+* link:/releases/PROC/{proc_release}/task_planning.html#_m_allocation_class[M_ALLOCATION^]
+[.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_m_calendar_class[M_CALENDAR^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_m_callback_class[M_CALLBACK^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/task_planning.html#_m_capture_dataset_spec_class[M_CAPTURE_DATASET_SPEC^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_m_condition_group_class[M_CONDITION_GROUP^]
 [.xcode]
@@ -120,9 +178,13 @@
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_m_resource_allocation_class[M_RESOURCE_ALLOCATION^]
 [.xcode]
+* link:/releases/PROC/{proc_release}/task_planning.html#_m_review_dataset_spec_class[M_REVIEW_DATASET_SPEC^]
+[.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_m_task_class[M_TASK^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_m_task_action_class[M_TASK_ACTION^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/task_planning.html#_m_task_costing_class[M_TASK_COSTING^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_m_task_group_class[M_TASK_GROUP^]
 [.xcode]
@@ -223,16 +285,3 @@
 * link:/releases/PROC/{proc_release}/task_planning.html#_time_specifier_class[TIME_SPECIFIER^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_work_plan_class[WORK_PLAN^]
-
-==== Package zz-test
-
-[.xcode]
-* link:/releases/PROC/{proc_release}/zz-test.html#_api_call_class[API_CALL^]
-[.xcode]
-* link:/releases/PROC/{proc_release}/zz-test.html#_parameter_def_class[PARAMETER_DEF^]
-[.xcode]
-* link:/releases/PROC/{proc_release}/zz-test.html#_parameter_mapping_class[PARAMETER_MAPPING^]
-[.xcode]
-* link:/releases/PROC/{proc_release}/zz-test.html#_query_call_class[QUERY_CALL^]
-[.xcode]
-* link:/releases/PROC/{proc_release}/zz-test.html#_system_call_class[SYSTEM_CALL^]
