--- a/docs/task_planning/master06-3-definition_task_plan.adoc
+++ b/docs/task_planning/master06-3-definition_task_plan.adoc
@@ -35,7 +35,7 @@ Here, the notion of 'completion' corresponds to the `completed` state in the Tas
 
 The AND case is the simplest, since there is no conditional processing - all paths must be followed. An AND Group essentially represents work that should be performed, but for which the ordering is more relaxed than for a strict sequential Group.
 
-The XOR case represents a 1/N choice, and is understood in this specification as representing the _intent_ that only one path can sensibly be followed, usually because the branches are mutually exclusive alternatives in reality. Consequently, in execution, an XOR Group is processed such that as soon as one branch is chosen by a performer transitioning a Task from the `available` state, _the first Task in all remaining branches is transitioned to `cancelled`_, effectively cancelling the non-chosen branches. In this case completion is also trivial to determine. 
+The XOR case represents a 1/N choice, and is understood in this specification as representing the _intent_ that only one path can sensibly be followed, usually because the branches are mutually exclusive alternatives in reality. Consequently, in execution, an XOR Group is processed such that as soon as one branch is chosen by a performer transitioning a Task from the `available` state, _the first Task in all remaining branches is transitioned to_ `cancelled`, effectively cancelling the non-chosen branches. In this case completion is also trivial to determine. 
 
 However the OR case is more complicated. A minimal interpretation of 'OR' logic is that as soon as one branch in the Group completes, the Group is considered `completed`, and no more Tasks from other branches are available to perform. A maximal interpretation is that Group completion is achieved only when every path commenced completes. The model represents these two cases explicitly, via the values `or_first_completed` and `or_all_started` respectively of `TASK_GROUP._concurrency_mode_`.
 
