--- a/docs/UML/classes/m_performer_allocation.adoc
+++ b/docs/UML/classes/m_performer_allocation.adoc
@@ -6,7 +6,7 @@ h|*Class*
 2+^h|*M_PERFORMER_ALLOCATION*
 
 h|*Description*
-2+a|
+2+a|Tracking information for a current performer allocation.
 
 h|*Attributes*
 ^h|*Signature*
@@ -14,13 +14,13 @@ h|*Attributes*
 
 h|*1..1*
 |*performer*: `PARTY_IDENTIFIED`
-a|
+a|Identity of allocated performer.
 
 h|*1..1*
-|*connection*: 
+|*connection*: `String`
 a|URI used to connect to performer (e.g. application, messaging channel) for notifications.
 
 h|*1..1*
 |*other_details*: `Hash<String, String>`
-a|
+a|Archetypable details.
 |===
