--- a/docs/UML/classes/dl_condition_def.adoc
+++ b/docs/UML/classes/dl_condition_def.adoc
@@ -17,5 +17,5 @@ h|*1..1*
 a|
 
 h|*Invariants*
-2+a|*_Inv_boolean_definition_*: `definition.is_boolean()`
+2+a|_Inv_boolean_definition_: `definition.is_boolean()`
 |===
