--- a/docs/UML/classes/event_action.adoc
+++ b/docs/UML/classes/event_action.adoc
@@ -38,5 +38,5 @@ a|Next state of the receiver thread of control. In the blocking case, this is th
 If not set, default processing will be performed, which for a Task is to enter the `available` state.
 
 h|*Invariants*
-2+a|*_Inv_custom_actions_next_state_*: `custom_actions.for_all ((ev:EVENT_ACTION) {ev.receiver_thread_next_state /= Void})`
+2+a|_Inv_custom_actions_next_state_: `custom_actions.for_all ((ev:EVENT_ACTION) {ev.receiver_thread_next_state /= Void})`
 |===
