--- a/docs/UML/classes/decision_branch.adoc
+++ b/docs/UML/classes/decision_branch.adoc
@@ -20,5 +20,5 @@ h|*1..1*
 a|Constraint on result value of the owning Decision Group `_test_` expression, for this branch.
 
 h|*Invariants*
-2+a|*_Inv_no_wait_condition_*: `wait_spec = Void`
+2+a|_Inv_no_wait_condition_: `wait_spec = Void`
 |===
