--- a/docs/decision_language/master.adoc
+++ b/docs/decision_language/master.adoc
@@ -47,10 +47,12 @@ include::master00-amendment_record.adoc[leveloffset=+1]
 //
 :sectnums:
 include::master01-preface.adoc[leveloffset=+1]
-include::master02-overview.adoc[leveloffset=+1]
-include::master03-requirements.adoc[leveloffset=+1]
-include::master04-conceptual_model.adoc[leveloffset=+1]
-include::master05-execution_model.adoc[leveloffset=+1]
+include::master02-requirements.adoc[leveloffset=+1]
+include::master03-overview.adoc[leveloffset=+1]
+include::master04-decision_language.adoc[leveloffset=+1]
+include::master06-service_interface.adoc[leveloffset=+1]
+include::master08-usage.adoc[leveloffset=+1]
+include::master09-proxy_objects.adoc[leveloffset=+1]
 include::master10-dlom.adoc[leveloffset=+1]
 
 //include::master05-dl_statements.adoc[leveloffset=+1]
