--- a/docs/decision_language/master03-overview.adoc
+++ b/docs/decision_language/master03-overview.adoc
@@ -1,5 +1,7 @@
 = Overview
 
+== Conceptual Model
+
 The openEHR Decision Language (DL) and Decision Model (DM) define a formalism for expressing decision logic used in healthcare and biomedical research. The essential characterisation of 'decision logic' understood in this specification is a function-oriented logic that generates deductive inferences, such as clinical classification of patients (including diagnosis) from input data, generally obtained from real world observation and measurement.
 
 For example, a simple decision function can be written to infer from the input variables `_heart-rate_` and `_heart-rhythm_` whether a patient has atrial fibrillation, or other forms of arrhythmia. Decision functions may be represented in other ways as well, including _decision tables_, which are widely used in many industries.
