--- a/docs/task_planning/master00-amendment_record.adoc
+++ b/docs/task_planning/master00-amendment_record.adoc
@@ -7,12 +7,18 @@
 4+^h|*PROC Release 1.5.0*
 
 |[[latest_issue]]1.5.0
+|{spec_tickets}/SPECPROC-22[SPECPROC-22^]. Change method of 'manual notification' for callbacks; remove `_manually_notified_: Boolean` from `CALLBACK_NOTIFICATION`.
+|M Polajnar, +
+ T Beale
+|[[latest_issue_date]]16 Apr 2020
+
+|
 |{spec_tickets}/SPECPROC-12[SPECPROC-12^]. Define lifecycle state for parallel Task Groups, including decision groups. Moved lifecycle state to 6.2.3; update 6.3.2; update Aggregate Lifecycle State section (7.3); +
  {spec_tickets}/SPECPROC-34[SPECPROC-34^]. Clarify evaluate order for `REPEAT_SPEC._terminate_condition_` to 'pre'.
 |B Naess, +
  M Polajnar, +
  T Beale
-|[[latest_issue_date]]19 Mar 2020
+|19 Mar 2020
 
 |
 |{spec_tickets}/SPECPROC-32[SPECPROC-32^]. Improve Introduction and Requirements Discussion.
