--- a/docs/UML/classes/dl_module.adoc
+++ b/docs/UML/classes/dl_module.adoc
@@ -27,8 +27,8 @@ h|*0..1*
 |*proxy_properties*: `List<BMM_PROPERTY>`
 a|Properties representing real-world objects, such as the patient state, the patient history (logical EHR) etc.
 
-h|*1..1*
-|*proxy_objects[*]*: `PROXY_MODULE`
+h|*0..1*
+|*proxy_objects*: `List<PROXY_MODULE>`
 a|Imported proxy modules
 h|*Functions*
 ^h|*Signature*
