--- a/docs/decision_language/master02-requirements.adoc
+++ b/docs/decision_language/master02-requirements.adoc
@@ -1,6 +1,9 @@
 = Requirements
 
-The requirements of openEHR DL fall into a number of categories, described below.
+The requirements of openEHR Decision Language fall into a number of categories, described below.
+
+[.tbd]
+TBD: this section only very rough for now.
 
 == Caller Interaction
 
